--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/skillet-chicken-pasta.html"
+    <a href="recipes/skillet-chicken-pasta.html">Skillet Chicken Pasta</a>
 </body>
 </html>
