--- a/recipes/skillet-chicken-pasta.html
+++ b/recipes/skillet-chicken-pasta.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Skillet Chicken Pasta</h1>
     <h2>Ingredients</h2>
     <ul>
