Memberi deskripsi dan gambar untuk resep skillet chicken pasta

--- a/recipes/skillet-chicken-pasta.html
+++ b/recipes/skillet-chicken-pasta.html
@@ -8,6 +8,16 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Skillet Chicken Pasta</h1>
+    <img src="../images/skillet-chicken-pasta.jpg" alt="Skillet Chicken Pasta">
+    <p>
+        This chicken pasta skillet meal is a tasteful combination of vegetables, chicken, and pasta prepared in a cast iron skillet. My family eats tons of this stuff.
+    </p>
+    <p>
+        <strong>Prep Time: </strong>10 mins<br>
+        <strong>Cook Time: </strong>25 mins<br>
+        <strong>Total Time: </strong>35 mins<br>
+        <strong>Servings: </strong>2<br>
+    </p>
     <h2>Ingredients</h2>
     <ul>
         <li>½ (8 ounce) package spaghettini</li>
