Menambahkan resep hawaiian sausage skillet

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/skillet-chicken-pasta.html">Skillet Chicken Pasta</a>
+    <a href="recipes/hawaiian-sausage-skillet.html">Hawaiian Sausage Skillet</a>
 </body>
 </html>
