Modif agar link index.html sejajar secara vertikal

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/skillet-chicken-pasta.html">Skillet Chicken Pasta</a>
+    <a href="recipes/skillet-chicken-pasta.html">Skillet Chicken Pasta</a><br>
     <a href="recipes/hawaiian-sausage-skillet.html">Hawaiian Sausage Skillet</a>
 </body>
 </html>
