Menambahkan halaman resep american goulish

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/skillet-chicken-pasta.html">Skillet Chicken Pasta</a><br>
-    <a href="recipes/hawaiian-sausage-skillet.html">Hawaiian Sausage Skillet</a>
+    <a href="recipes/hawaiian-sausage-skillet.html">Hawaiian Sausage Skillet</a><br>
+    <a href="recipes/american-goulish.html">American Goulish</a>
 </body>
 </html>
