--- a/recipes/american-goulish.html
+++ b/recipes/american-goulish.html
@@ -40,7 +40,7 @@
         <li>¼ cup chopped Italian parsley</li>
         <li>1 cup shredded white Cheddar cheese (Optional)</li>
     </ul>
-    <h2>Directions</h2>
+    <h2>Steps</h2>
     <ol>
         <li>Gather all ingredients.</li>
         <li>Heat oil in a pot over medium-high heat. Add ground beef and onion; cook and stir until beef is browned and crumbly and onion is translucent, about 5 minutes. Continue to cook and stir until liquid is evaporated, 3 to 5 minutes. Add garlic, bay leaves, paprika, Italian seasoning, salt, black pepper, and cayenne.</li>
