--- a/recipes/skillet-chicken-pasta.html
+++ b/recipes/skillet-chicken-pasta.html
@@ -38,7 +38,7 @@
         <li>1 cup sliced fresh mushrooms</li>
         <li>¼ cup grated Parmesan cheese</li>
     </ul>
-    <h2>Directions</h2>
+    <h2>Steps</h2>
     <ol>
         <li>Bring a large pot of water to a boil over high heat. Stir in spaghettini and return to a boil. Cook pasta until it has cooked through, but is still firm to the bite, 6 to 8 minutes. Drain well and keep warm.</li>
         <li>Heat 2 tablespoons oil in a large skillet over medium heat. Stir in tomatoes; cook until they soften and begin to break down. Stir in garlic powder, oregano, basil, salt, pepper, sugar, and ketchup. Heat sauce through and reserve.</li>
